# algo-trading-stat-arb

./: README.md  main.py  pyproject.toml  test.py
config/: params.yaml
core/: backtest.py  config.py  hedge_ratio.py  loader.py
data/: download_prices.py  dukaxcopy_scrapper.py  prices_AEROSPACE_DEFENSE.csv  prices_AGRICULTURE_FUTURES.csv  prices_BANKING_GLOBAL.csv  prices_BIG_TECH.csv  prices_BIOTECH.csv  prices_CHEMICALS.csv  prices_CLOUD_COMPUTING.csv  prices_DIVIDEND_ARISTOCRATS.csv  prices_ECOMMERCE.csv  prices_EMERGING_MARKETS.csv  prices_EM_FX_FUTURES.csv  prices_EQUITY_INDEX_FUTURES.csv  prices_EURO_RATES_FUTURES.csv  prices_FINTECH.csv  prices_INDUSTRIALS.csv  prices_INFRASTRUCTURE.csv  prices_INSURANCE.csv  prices_LUXURY_GOODS.csv  prices_MAJOR_FX_FUTURES.csv  prices_MEDIA_ENTERTAINMENT.csv  prices_MEDICAL_DEVICES.csv  prices_MICRO_FUTURES.csv  prices_MINING.csv  prices_OIL_MAJORS.csv  prices_PAYMENTS.csv  prices_PHARMACEUTICALS.csv  prices_REITS.csv  prices_RENEWABLE_ENERGY.csv  prices_RETAIL_CHAINS.csv  prices_SEMICONDUCTORS.csv  prices_TELECOMS.csv  prices_TRAVEL_HOSPITALITY.csv  prices_US_RATES_FUTURES.csv  prices_VALUE_STOCKS.csv
experiments/: aggregate_portfolio.py  analyze_results.py  analyze_trades.py  benchmark_compare.py  build_portfolio_equity.py  compare_portfolio.py  debug_single_pair.py  generate_mixte_results.py  half_life_analysis.py  portfolio_analysis.py  portfolio_compare.py  run_batch.py  run_walkforward.py  trade_analyzer.py  validate_final.py
notebooks/: 01_universe_selection.ipynb  02_pair_selection.ipynb  03_backtest_pairs.ipynb  (+2 more)
(+1796 files in other folders)
